# RecoveryTools

./: .appveyor.yml  .gitignore  CMakeLists.txt  cmake_commands.txt  configure.bat
FSViewer/: CMakeLists.txt
FSViewer/include/: BaseIndex.h  foldermodel.h  fstablemodel.h  fstreemodel.h  fsviewer.h
FSViewer/src/: FSViewer.cpp  main.cpp  recoverdialog.cpp
RawRecovery/: CMakeLists.txt
RawRecovery/forms/: RawRecovery.qrc  RawRecovery.ui  rawwidget.cpp  rawwidget.ui
RawRecovery/include/: RawRecovery.h  deviceitem.h  propertiesWidget.h  rawwidget.h  signatureitem.h  treeitem.h
RawRecovery/src/: RawRecovery.cpp  config.h.in  main.cpp  rawwidget.cpp  versioninfo.rc.in
consoleapp/: CMakeLists.txt
consoleapp/include/: consolerawparser.h  fileoffsetwriter.h  fleshcollector.h  vxfs.h  vxfs_inode.h  xoranalyzer.h
consoleapp/src/: consolerawparser.cpp  ext4_raw_main.cpp  fileoffetswrite_main.cpp  fix_dbf_main.cpp  fleshcollector_main.cpp  main_xoranalyzer.cpp  replaceBads_main.cpp  vmfs_main.cpp
libfs/: CMakeLists.txt
libfs/include/fs/: const_fs.h
libfs/src/: BootSector.cpp  DirectoryTree.cpp  FileSystem.cpp  VirtualReader.cpp  fat_fs.cpp
libio/: CMakeLists.txt  cmake_install_tmp.cmake
libio/include/io/: constants.h  dataarray.h  dbf.h  diskdevice.h  entropy.h  error.h  file.h  finder.h  fs.h  functions.h  onec.h  physicaldrive.h  sparsebundle.h  utility.h
libio/include/libio/: XorAnalyzer.h  dataarray.h  diskdevice.h  error.h  finder.h  fs.h  iodevice.h  ioengine.h  onec.h  uniqueid.h
libio/src/: dataarray.cpp  diskdevice.cpp  entropy.cpp  error.cpp  file.cpp  fs.cpp  ioengine.cpp  uniqueid.cpp  utility.cpp
libjsonreader/: CMakeLists.txt
libjsonreader/include/: jsonreader.h  signaturereader.h
libjsonreader/include/json/: jsonreader.h  signaturereader.h
libjsonreader/src/: jsonreader.cpp
libraw/: CMakeLists.txt
libraw/include/raw/: abstractraw.h  canonfragment.h  dji.h  djvuraw.h  ext4_raw.h  factories.h  filestruct.h  gopro.h  gopronew.h  oleraw.h  onec.h  prproj.h  qtfragment.h  quicktime.h  rawmxf.h  rawpln.h  rawriff.h  rawzip.h  standartraw.h  webmraw.h  zoomh6raw.h
libraw/src/: ext4_raw.cpp  factories.cpp
rawrecoveryconsole/: CMakeLists.txt  CanonEOSR6.json  CanonStartFragment.json  canonfragment.json  canonstartfragment.json  go_pro.json  prproj.json  webm.json  zoomH6_copy.json
rawrecoveryconsole/src/: main.cpp
signaturetestconsole/: CMakeLists.txt
signaturetestconsole/include/: analyzer.h  extensionbase.h  extensionextractor.h  signatureTester.h
signaturetestconsole/src/: extract_extension_main.cpp  main.cpp  vmfs_main.cpp
